--- a/WEBBAGE/HOME/Video/Video_Style.css
+++ b/WEBBAGE/HOME/Video/Video_Style.css
@@ -130,125 +130,28 @@ Navigation bar
     }
 }
 
-
-
 /*
-Navigation bar
-*/
 
 
+**/
 
 
-img {
-    display: block;
-    width: 100%;
-    height: auto;
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 30px;
+    height: 0;
 }
-
-h1,
-h2,
-h3 {
-    margin: 0;
-    padding: 1em 0;
-}
-
-p {
-    margin: 0;
-    padding: 1em 0;
-}
-
-.btn {
-    display: inline-block;
-    background: #333;
-    color: #fff;
-    text-decoration: none;
-    padding: 1em 2em;
-    border: 1px solid #666;
-    margin: 0.5em 0;
-}
-
-.btn:hover {
-    background: #eaeaea;
-    color: #333;
-}
-
-/* Header Showcase */
-
-#showcase {
-    min-height: 450px;
-    color: #fff;
-    text-align: center;
-}
-
-#logo{
-    margin-top: 40px;
-    width: 70px;
-    height: 70px;
+.videoWrapper iframe {
     position: absolute;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: inline-block;
-}
-#showcase .bg-image {
-    position: absolute;
-    background: #333
-    url("cornichons-essen-gemuse-8694.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 450px;
-    z-index: -1;
-    opacity: 0.4;
+    height: 100%;
 }
 
-#showcase h1 {
-    padding-top: 100px;
-    padding-bottom: 0;
-}
 
-#showcase .content-wrap,
-#section-a .content-wrap {
-    padding: 0 1.5em;
-}
 
-/* Section A */
-
-#section-a {
-    background: #eaeaea;
-    color: #333;
-    padding-bottom: 2em;
-}
-
-/* Section B */
-
-#section-b {
-    padding: 2em 1em 1em;
-}
-
-#section-b ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-#section-b li {
-    margin-bottom: 1em;
-    background: #fff;
-    color: #333;
-}
-
-.card-content {
-    padding: 1.5em;
-}
-
-/* Section C */
-
-#section-c {
-    background: #fff;
-    color: #333;
-    padding: 2em;
-}
 
 /* Section D / Boxes */
 
@@ -276,44 +179,16 @@ p {
     color: white;
     text-decoration: none;
 }
-
-/* Media Queries */
-
 @media (min-width: 700px) {
     .grid {
         display: grid;
         grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
     }
 
-    #section-a .content-text {
-        columns: 2;
-        column-gap: 2em;
-    }
-
-    #section-a .content-text p {
-        padding-top: 0;
-    }
-
-    .content-wrap,
-    #section-b ul {
-        grid-column: 2/4;
-    }
-
     .box,
     #main-footer div {
         grid-column: span 2;
     }
-
-    #section-b ul {
-        display: flex;
-        justify-content: space-around;
-    }
-
-    #section-b li {
-        width: 31%;
-    }
-
-
 
 
     .sozial1,.sozial2, .sozial3 , .sozial4 {
@@ -352,21 +227,3 @@ p {
 
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
