--- a/WEBBAGE/Spreewaldgurken/css/StyleShop.css
+++ b/WEBBAGE/Spreewaldgurken/css/StyleShop.css
@@ -130,59 +130,55 @@ Navigation bar
     }
 }
 
-/*++++++++++++++********   Galariye      +++++++++++++**/
-* {
-    box-sizing: border-box;
-}
+/*
 
-.galarie {
-    box-sizing: border-box;
-}
 
-.header {
-    text-align: center;
-    padding: 32px;
+**/
+.Wrapper1{
+    padding: 10px;
 }
-
-.row {
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
-    padding: 0 4px;
+.Wrapper1 > div{
+    background-color: rgba(191, 112, 47, 0.9);
+    padding: 1em;
 }
-
-/* Create four equal columns that sits next to each other */
-.column {
-    -ms-flex: 25%; /* IE10 */
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
+.Wrapper1 > div:nth-child(odd){
+    background-color: #ddd;
 }
+.Wrapper1 {
+    display: grid;
 
-.column img {
-    margin-top: 8px;
-    vertical-align: middle;
+    grid-template-columns: 1fr 1fr   ;
+    grid-gap: 1em;
+
+    grid-auto-rows: minmax(100px, auto);
+
 }
+@media screen and (max-width: 750px){
+    .Wrapper1 {
+        display: grid;
 
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-    .column {
-        -ms-flex: 50%;
-        flex: 50%;
-        max-width: 50%;
+        grid-template-columns: 1fr    ;
+        grid-gap: 1em;
+
+        grid-auto-rows: minmax(100px, auto);
+
     }
+
 }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-    .column {
-        -ms-flex: 100%;
-        flex: 100%;
-        max-width: 100%;
-    }
+
+
+.boxe4:hover, .boxe3:hover, .boxe2:hover ,.boxe1:hover{
+    opacity: 0.3;
+    background: #dd4b39;
+    color: white;
 }
 
+.boxe1, .boxe2, .boxe3 , .boxe4 {
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    grid-gap: 2em;
+}
 
 
 /* Section D / Boxes */
@@ -222,7 +218,18 @@ Navigation bar
         grid-column: span 2;
     }
 
-}
+    #section-b ul {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    #section-b li {
+        width: 31%;
+    }
+
+
+
+
     .sozial1,.sozial2, .sozial3 , .sozial4 {
         text-decoration: none;
         padding: 20px;
@@ -232,6 +239,8 @@ Navigation bar
         text-decoration: none;
         margin: 5px 2px;
         border-radius: 50%;
+
+
     }
 
     #sozial:hover {
@@ -258,4 +267,8 @@ Navigation bar
     }
 
 
+}
 
+#shopee{
+    margin-top: -15px;
+}
