--- a/WEBBAGE/Spreewaldgurken/css/Style.css
+++ b/WEBBAGE/Spreewaldgurken/css/Style.css
@@ -55,6 +55,7 @@ Navigation bar
     overflow: hidden;
 }
 
+
 .dropdown .dropbtn {
     font-size: 17px;
     border: none;
@@ -64,6 +65,9 @@ Navigation bar
     background-color: inherit;
     font-family: inherit;
     margin-top: 3px;
+}
+#shopee{
+    margin-top: -15px;
 }
 
 .dropdown-content {
@@ -192,7 +196,7 @@ p {
 #showcase .bg-image {
     position: absolute;
     background: #333
-    url("Imges/Gurken.jpg");
+    url("../img/Imges/Gurken.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -288,7 +292,7 @@ p {
     #section-a .content-text {
         columns: 2;
         column-gap: 2em;
-    }
+    }dropbtn
 
     #section-a .content-text p {
         padding-top: 0;
@@ -316,13 +320,13 @@ p {
 }
 
 
-    .sozial1,.sozial2, .sozial3 , .sozial4 {
+    .sozial1 .sozial2, .sozial3 , .sozial4 {
         text-decoration: none;
         padding: 20px;
         font-size: 30px;
         width: 30px;
         text-align: center;
-        text-decoration: none;
+       /* text-decoration: none;*/
         margin: 5px 2px;
         border-radius: 50%;
     }
@@ -354,13 +358,253 @@ p {
 
 
 
+/** contact us **/
+
+input[type=text],  textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #333333;
+    padding: 20px;
+}
+
+
+
+
+/*++++++++++++++********   Galariye      +++++++++++++**/
+* {
+    box-sizing: border-box;
+}
+
+.galarie {
+    box-sizing: border-box;
+}
+
+.header {
+    text-align: center;
+    padding: 32px;
+}
+
+.row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+    -ms-flex: 25%; /* IE10 */
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        -ms-flex: 50%;
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
+}
+
+
+/************************        Sleider        ****************/
+
+.slider{
+    overflow: hidden;
+    height: 450px;
+}
+
+.slider figure div{
+    width: 20%;
+    float: left;
+}
+
+.slider figure img{
+    width: 100%;
+    float: left;
+}
+
+.slider figure{
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    animation: 20s slidy infinite;
+}
+
+@keyframes slidy{
+    0%{
+        left: 0%
+    }
+
+    10%{
+        left: 0%;
+    }
+
+    12%{
+        left: -100%;
+    }
+
+    22%{
+        left: -100%;
+    }
+
+    24%{
+        left: -200%;
+    }
+
+    34%{
+        left: -200%;
+    }
+
+    36%{
+        left: -300%;
+    }
+
+    46%{
+        left: -300%;
+    }
+
+    48%{
+        left: -400%;
+    }
+
+    58%{
+        left: -400%;
+    }
+
+    60%{
+        left: -300%;
+    }
+
+    70%{
+        left: -300%;
+    }
+
+    72%{
+        left: -200%;
+    }
+
+    82%{
+        left: -200%;
+    }
+
+    84%{
+        left: -100%;
+    }
+
+    94%{
+        left: -100%;
+    }
+
+    96%{
+        left: 0%;
+    }
+
+    100%{
+        left: 0%;
+    }
+}
+
+/************************        Section-c        ****************/
+#section-c {
+    background: #fff;
+    color: #333;
+    padding: 2em;
+}
+
+/************************        Video        ****************/
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 30px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 
 
 
 
 
+.Wrapper1{
+    padding: 10px;
+}
+.Wrapper1 > div{
+    background-color: rgba(191, 112, 47, 0.9);
+    padding: 1em;
+}
+.Wrapper1 > div:nth-child(odd){
+    background-color: #ddd;
+}
+.Wrapper1 {
+    display: grid;
 
+    grid-template-columns: 1fr 1fr   ;
+    grid-gap: 1em;
+
+    grid-auto-rows: minmax(100px, auto);
+
+}
+@media screen and (max-width: 750px){
+    .Wrapper1 {
+        display: grid;
+
+        grid-template-columns: 1fr    ;
+        grid-gap: 1em;
+
+        grid-auto-rows: minmax(100px, auto);
+
+    }
+
+}
 
 
 
