--- a/WEBBAGE/Spreewaldgurken/css/StyleShop.css
+++ b/WEBBAGE/Spreewaldgurken/css/StyleShop.css
@@ -236,7 +236,6 @@ Navigation bar
         font-size: 30px;
         width: 30px;
         text-align: center;
-        text-decoration: none;
         margin: 5px 2px;
         border-radius: 50%;
 
@@ -270,5 +269,18 @@ Navigation bar
 }
 
 #shopee{
-    margin-top: -15px;
+    margin-top: -12px;
 }
+
+
+#show {
+    padding: 2em;
+    background: #000;
+    color: #fff;
+    text-align: center;
+    font-size: 2.1em;
+
+}
+
+
+
