SVG+SHOP+NavJavaScript

--- a/WEBBAGE/Spreewaldgurken/css/StyleShop.css
+++ b/WEBBAGE/Spreewaldgurken/css/StyleShop.css
@@ -142,7 +142,7 @@ Navigation bar
     padding: 1em;
 }
 .Wrapper1 > div:nth-child(odd){
-    background-color: #ddd;
+    background-color: #dd610a;
 }
 .Wrapper1 {
     display: grid;
