--- a/WEBBAGE/Spreewaldgurken/css/StyleShop.css
+++ b/WEBBAGE/Spreewaldgurken/css/StyleShop.css
@@ -282,5 +282,18 @@ Navigation bar
 
 }
 
+/*
+#Boxxe{
 
+    position: absolute;
+url("../img/img/images/55.png");
+    background: #333;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+    z-index: -1;
+
+}  */
 
