--- a/WEBBAGE/Spreewaldgurken/css/Style.css
+++ b/WEBBAGE/Spreewaldgurken/css/Style.css
@@ -642,10 +642,7 @@ tr:nth-child(even){background-color: darkseagreen}
 
 #showcase3 .bg-image {
     position: absolute;
-    background: #333
-    url("../img/offer/bauernhof-blauem-hintergrund-danksagung-1328892.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
+    background: #333 url("../img/offer/bauernhof-blauem-hintergrund-danksagung-1328892.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
@@ -654,10 +651,7 @@ tr:nth-child(even){background-color: darkseagreen}
 }
 #showcase2 .bg-image {
     position: absolute;
-    background: #333
-    url("../img/offer/appetizer-cremig-essen-1277483.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
+    background: #333 url("../img/offer/appetizer-cremig-essen-1277483.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
