--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -661,7 +661,7 @@ th,td {
     text-align: center;
     font-size: 2.1em;
 
-    background-color: #dd4b39;
+    background-color: #bf702f;
     border: 3px solid #ddd;
 }
 
