--- a/WEBBAGE/Spreewaldgurken/css/Style.css
+++ b/WEBBAGE/Spreewaldgurken/css/Style.css
@@ -304,9 +304,14 @@ p {
     }
 
     .box,
+
+
+
     #main-footer div {
         grid-column: span 2;
     }
+
+
 
     #section-b ul {
         display: flex;
@@ -604,6 +609,18 @@ input[type=submit]:hover {
 
     }
 
+    .grid-grid{
+        list-style: none;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr ;
+        grid-gap: 1em;
+        grid-auto-rows: minmax(100px, auto);
+
+    }
+    .socicons-list li {
+        margin: 10px 5px;
+    }
+
 
 }
 
@@ -615,14 +632,6 @@ th,td {
 
 }
 
-
-
- /*#Triptable , .table{
-    background-position: center;
-    width: 100%;
-    position: center;
-    text-align: center;
-    margin-left: 20px; } */
 
 
 .table {
@@ -658,3 +667,48 @@ tr:nth-child(even){background-color: darkseagreen}
     z-index: -1;
     opacity: 0.6;
 }
+
+
+
+
+.socicons-list {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 1em;
+
+}
+.socicons-list li {
+    margin: 30px 10px;
+}
+.socicons-list li a {
+    text-decoration: none;
+    padding: 30px;
+    font-size: 30px;
+    border-radius: 50%;
+    color: #fff;
+    background-color: #f1f1f1;
+    transition: all ease-in-out 150ms;
+}
+.socicons-list li a:hover {
+    text-shadow: 0 5px 10px #212121;
+}
+.socicons-list li:nth-child(1) a {
+    background-color: #3e5b98;
+}
+.socicons-list li:nth-child(2) a {
+    background-color: #c13584;
+}
+.socicons-list li:nth-child(3) a {
+    background-color: #4da7de;
+}
+.socicons-list li:nth-child(4) a {
+    background-color: #dd4b39;
+}
+.socicons-list li:nth-child(5) a {
+    background-color: #212121;
+}
+
+
+
+
