validation with https://validator.nu

--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -422,6 +422,7 @@ input[type=submit]:hover {
 
 
 /************************        Sleider        ****************/
+/***************** Assigment 2C **************/
 
 .slider{
     overflow: hidden;
