--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: #333;
-    color: #fff;
+    background: #c6c6c6;
+    color: #000000;
     font-size: 1.1em;
     line-height: 1.5;
     text-align: center;
@@ -14,7 +14,7 @@ Navigation bar
 
 .topnav {
     overflow: hidden;
-    background-color: #273625;
+    background-color: #c6c6c6;
 }
 
 
@@ -31,7 +31,7 @@ Navigation bar
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -41,8 +41,8 @@ Navigation bar
 
 
 .active {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #c6c6c6;
+    color: #000000;
 }
 
 .topnav .icon {
@@ -59,7 +59,7 @@ Navigation bar
     font-size: 17px;
     border: none;
     outline: none;
-    color: white;
+    color: #000000;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
@@ -73,15 +73,15 @@ Navigation bar
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #c6c6c6;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(198, 198, 198, 0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: #000000;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -89,12 +89,12 @@ Navigation bar
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #555;
-    color: white;
+    background-color: #c6c6c6;
+    color: #000000;
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #c6c6c6;
     color: black;
 }
 
@@ -163,24 +163,24 @@ p {
 
 .btn {
     display: inline-block;
-    background: #333;
-    color: #fff;
+    background: #c6c6c6;
+    color: #000000;
     text-decoration: none;
     padding: 1em 2em;
-    border: 1px solid #666;
+    border: 1px solid #000000;
     margin: 0.5em 0;
 }
 
 .btn:hover {
-    background: #eaeaea;
-    color: #333;
+    background: #c6c6c6;
+    color: #000000;
 }
 
 /* Header Showcase */
 
 #showcase {
     min-height: 450px;
-    color: #fff;
+    color: #000000;
     text-align: center;
 }
 
@@ -202,7 +202,7 @@ p {
     width: 100%;
     height: 450px;
     z-index: -1;
-    opacity: 0.4;
+    opacity: 0.1;
 }
 
 #showcase h1 {
@@ -218,8 +218,8 @@ p {
 /* Section A */
 
 #section-a {
-    background: #eaeaea;
-    color: #333;
+    background: #c6c6c6;
+    color: #000000;
     padding-bottom: 2em;
 }
 
@@ -237,8 +237,8 @@ p {
 
 #section-b li {
     margin-bottom: 1em;
-    background: #fff;
-    color: #333;
+    background: #c6c6c6;
+    color: #000000;
 }
 
 .card-content {
@@ -248,8 +248,8 @@ p {
 /* Section C */
 
 #section-c {
-    background: #fff;
-    color: #333;
+    background: #c6c6c6;
+    color: #000000;
     padding: 2em;
 }
 
@@ -257,26 +257,26 @@ p {
 
 #section-d .box {
     padding: 2em;
-    color: #fff;
+    color: #000000;
 }
 
 #section-d .box:first-child {
-    background: #9b7e4b;
+    background: #c6c6c6;
 }
 #section-d .box {
-    background: #3a5227;
+    background: #c6c6c6;
 }
 /* Footer */
 
 #main-footer {
     padding: 2em;
-    background: #000;
-    color: #fff;
+    background: #c6c6c6;
+    color: #000000;
     text-align: center;
 }
 
 #main-footer a {
-    color: white;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -337,7 +337,7 @@ p {
 input[type=text],  textarea {
     width: 100%;
     padding: 12px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 4px;
     box-sizing: border-box;
     margin-top: 6px;
@@ -346,8 +346,8 @@ input[type=text],  textarea {
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #c6c6c6;
+    color: #000000;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -355,12 +355,12 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #c6c6c6;
 }
 
 .container {
     border-radius: 5px;
-    background-color: #333333;
+    background-color: #c6c6c6;
     padding: 20px;
 }
 
@@ -523,8 +523,8 @@ input[type=submit]:hover {
 
 /************************        Section-c        ****************/
 #section-c {
-    background: #fff;
-    color: #333;
+    background: #c6c6c6;
+    color: #000000;
     padding: 2em;
 }
 
@@ -553,11 +553,11 @@ input[type=submit]:hover {
     padding: 10px;
 }
 .Wrapper1 > div{
-    background-color: rgba(191, 112, 47, 0.9);
+    background-color: rgba(198, 198, 198, 0.9);
     padding: 1em;
 }
 .Wrapper1 > div:nth-child(odd){
-    background-color: #ddd;
+    background-color: #c6c6c6;
 }
 .Wrapper1 {
     display: grid;
@@ -592,7 +592,7 @@ table,th,td {
 }
 th,td {
     padding: 5px;
-    color: black;
+    color: #000000;
 }
 
 
@@ -601,11 +601,11 @@ th,td {
 
 #Triptable{
     text-align: center;
-    background-color: white;
+    background-color: #c6c6c6;
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     overflow-y: auto;
     margin: 0 0 1em;
 }
@@ -616,8 +616,8 @@ th,td {
     text-align: center;
     font-size: 2.1em;
 
-    background-color: #bf702f;
-    border: 3px solid #ddd;
+    background-color: #c6c6c6;
+    border: 3px solid #000000;
 }
 
 
@@ -626,7 +626,7 @@ th,td {
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     overflow-y: auto;
     margin: 0 0 1em;
 }
@@ -634,12 +634,13 @@ th,td {
 
 
 
-tr:nth-child(even){background-color: darkseagreen}
+tr:nth-child(even){background-color: #c6c6c6
+}
 
 
 #showcase3 .bg-image {
     position: absolute;
-    background: #333 url("../img/offer/3.jpeg") no-repeat center;
+    background: #333 url("../img/offer/bauernhof-blauem-hintergrund-danksagung-1328892.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
@@ -648,12 +649,12 @@ tr:nth-child(even){background-color: darkseagreen}
 }
 #showcase2 .bg-image {
     position: absolute;
-    background: #333 url("../img/offer/2.jpeg") no-repeat center;
+    background: #333 url("../img/offer/appetizer-cremig-essen-1277483.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
     z-index: -1;
-    opacity: 0.4;
+    opacity: 0.6;
 }
 
 
@@ -663,11 +664,11 @@ tr:nth-child(even){background-color: darkseagreen}
     padding: 10px;
 }
 .Wrapper1 > div{
-    background-color: rgba(191, 112, 47, 0.9);
+    background-color: rgba(198, 198, 198, 0.9);
     padding: 1em;
 }
 .Wrapper1 > div:nth-child(odd){
-    background-color: #dd610a;
+    background-color: #c6c6c6;
 }
 .Wrapper1 {
     display: grid;
@@ -696,9 +697,9 @@ tr:nth-child(even){background-color: darkseagreen}
 
 
 .boxe4:hover, .boxe3:hover, .boxe2:hover ,.boxe1:hover{
-    opacity: 0.3;
-    background: #dd4b39;
-    color: white;
+    opacity: 0.7;
+    background: #c6c6c6;
+    color: #000000;
 }
 
 .boxe1, .boxe2, .boxe3 , .boxe4 {
@@ -725,21 +726,21 @@ tr:nth-child(even){background-color: darkseagreen}
     padding: 20px;
     font-size: 20px;
     border-radius: 50%;
-    color: #fff;
-    background-color: #f1f1f1;
+    color: #000000;
+    background-color: #c6c6c6;
     transition: all ease-in-out 150ms;
 }
 .socicons-list li a:hover {
-    text-shadow: 0 5px 10px #212121;
+    text-shadow: 0 5px 10px #c6c6c6;
 }
 .socicons-list li:nth-child(1) a {
-    background-color: #3e5b98;
+    background-color: #c6c6c6;
 }
 .socicons-list li:nth-child(2) a {
-    background-color: #212121;
+    background-color: #c6c6c6;
 }
 .socicons-list li:nth-child(3) a {
-    background-color: #4da7de;
+    background-color: #c6c6c6;
 }
 
 
@@ -761,10 +762,10 @@ ul.breadcrumb li+li:before {
     content: "/\00a0";
 }
 ul.breadcrumb li a {
-    color: #0275d8;
+    color: #000000;
     text-decoration: none;
 }
 ul.breadcrumb li a:hover {
-    color: #01447e;
+    color: #c6c6c6;
     text-decoration: underline;
 }
