--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
     font-size: 1.1em;
     line-height: 1.5;
@@ -14,7 +14,7 @@ Navigation bar
 
 .topnav {
     overflow: hidden;
-    background-color: #c6c6c6;
+    background-color: #ffffff;
 }
 
 
@@ -41,7 +41,7 @@ Navigation bar
 
 
 .active {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     color: #000000;
 }
 
@@ -73,9 +73,9 @@ Navigation bar
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(198, 198, 198, 0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -89,12 +89,12 @@ Navigation bar
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     color: #000000;
 }
 
 .dropdown-content a:hover {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     color: black;
 }
 
@@ -163,7 +163,7 @@ p {
 
 .btn {
     display: inline-block;
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
     text-decoration: none;
     padding: 1em 2em;
@@ -172,7 +172,7 @@ p {
 }
 
 .btn:hover {
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
 }
 
@@ -194,7 +194,7 @@ p {
 
 #showcase .bg-image {
     position: absolute;
-    background: #333
+    background: #ffffff
     url("../img/Imges/Gurken.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -218,7 +218,7 @@ p {
 /* Section A */
 
 #section-a {
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
     padding-bottom: 2em;
 }
@@ -237,7 +237,7 @@ p {
 
 #section-b li {
     margin-bottom: 1em;
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
 }
 
@@ -248,7 +248,7 @@ p {
 /* Section C */
 
 #section-c {
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
     padding: 2em;
 }
@@ -261,16 +261,16 @@ p {
 }
 
 #section-d .box:first-child {
-    background: #c6c6c6;
+    background: #ffffff;
 }
 #section-d .box {
-    background: #c6c6c6;
+    background: #ffffff;
 }
 /* Footer */
 
 #main-footer {
     padding: 2em;
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
     text-align: center;
 }
@@ -346,7 +346,7 @@ input[type=text],  textarea {
 }
 
 input[type=submit] {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     color: #000000;
     padding: 12px 20px;
     border: none;
@@ -355,12 +355,12 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
 }
 
 .container {
     border-radius: 5px;
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     padding: 20px;
 }
 
@@ -523,7 +523,7 @@ input[type=submit]:hover {
 
 /************************        Section-c        ****************/
 #section-c {
-    background: #c6c6c6;
+    background: #ffffff;
     color: #000000;
     padding: 2em;
 }
@@ -553,11 +553,11 @@ input[type=submit]:hover {
     padding: 10px;
 }
 .Wrapper1 > div{
-    background-color: rgba(198, 198, 198, 0.9);
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 1em;
 }
 .Wrapper1 > div:nth-child(odd){
-    background-color: #c6c6c6;
+    background-color: #ffffff;
 }
 .Wrapper1 {
     display: grid;
@@ -601,7 +601,7 @@ th,td {
 
 #Triptable{
     text-align: center;
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
@@ -616,7 +616,7 @@ th,td {
     text-align: center;
     font-size: 2.1em;
 
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     border: 3px solid #000000;
 }
 
@@ -634,7 +634,7 @@ th,td {
 
 
 
-tr:nth-child(even){background-color: #c6c6c6
+tr:nth-child(even){background-color: #ffffff
 }
 
 
@@ -649,7 +649,7 @@ tr:nth-child(even){background-color: #c6c6c6
 }
 #showcase2 .bg-image {
     position: absolute;
-    background: #333 url("../img/offer/appetizer-cremig-essen-1277483.jpg") no-repeat center;
+    background: #ffffff url("../img/offer/appetizer-cremig-essen-1277483.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
@@ -664,11 +664,11 @@ tr:nth-child(even){background-color: #c6c6c6
     padding: 10px;
 }
 .Wrapper1 > div{
-    background-color: rgba(198, 198, 198, 0.9);
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 1em;
 }
 .Wrapper1 > div:nth-child(odd){
-    background-color: #c6c6c6;
+    background-color: #ffffff;
 }
 .Wrapper1 {
     display: grid;
@@ -727,20 +727,20 @@ tr:nth-child(even){background-color: #c6c6c6
     font-size: 20px;
     border-radius: 50%;
     color: #000000;
-    background-color: #c6c6c6;
+    background-color: #ffffff;
     transition: all ease-in-out 150ms;
 }
 .socicons-list li a:hover {
-    text-shadow: 0 5px 10px #c6c6c6;
+    text-shadow: 0 5px 10px #ffffff;
 }
 .socicons-list li:nth-child(1) a {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
 }
 .socicons-list li:nth-child(2) a {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
 }
 .socicons-list li:nth-child(3) a {
-    background-color: #c6c6c6;
+    background-color: #ffffff;
 }
 
 
@@ -750,7 +750,7 @@ tr:nth-child(even){background-color: #c6c6c6
 ul.breadcrumb {
     padding: 10px 16px;
     list-style: none;
-    background-color: #333333;
+    background-color: #ffffff;
 }
 ul.breadcrumb li {
     display: inline;
@@ -766,6 +766,6 @@ ul.breadcrumb li a {
     text-decoration: none;
 }
 ul.breadcrumb li a:hover {
-    color: #c6c6c6;
+    color: #000000;
     text-decoration: underline;
 }
