--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -323,6 +323,28 @@ p {
     color: white;
 }
 
+.fa:hover {
+    opacity: 0.7;
+
+}
+
+.fa-facebook{
+    color: #3c5a96;
+
+}
+.fa-twitter{
+    color: #59adeb;
+}
+
+.fa-linkedin{
+    color: #127cb3;
+}
+.fa-github{
+    color: #7c0f7b;
+}
+
+
+
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 600px) {
