--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -699,18 +699,18 @@ th,td {
 tr:nth-child(even){background-color: darkseagreen}
 
 
-#showcase3 .bg-image {
+#showcase3 .bg-image3 {
     position: absolute;
-    background: #333 url("../img/offer/3.jpeg") no-repeat center;
+    background: #333 url("../img/offer/111.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
     z-index: -1;
     opacity: 0.4;
 }
-#showcase2 .bg-image {
+#showcase2 .bg-image2 {
     position: absolute;
-    background: #333 url("../img/offer/2.jpeg") no-repeat center;
+    background: #333 url("../img/offer/222.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
