--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/StyleAlternativ.css
@@ -638,25 +638,24 @@ tr:nth-child(even){background-color: #ffffff
 }
 
 
-#showcase3 .bg-image {
+#showcase3 .bg-image3 {
     position: absolute;
-    background: #333 url("../img/offer/bauernhof-blauem-hintergrund-danksagung-1328892.jpg") no-repeat center;
+    background: #ffffff url("../img/offer/111.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
     z-index: -1;
     opacity: 0.4;
 }
-#showcase2 .bg-image {
+#showcase2 .bg-image2 {
     position: absolute;
-    background: #ffffff url("../img/offer/appetizer-cremig-essen-1277483.jpg") no-repeat center;
+    background: #ffffff url("../img/offer/222.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
     z-index: -1;
-    opacity: 0.6;
+    opacity: 0.4;
 }
-
 
 
 
