--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -723,7 +723,7 @@ tr:nth-child(even){background-color: darkseagreen}
 
 #showcase3 .bg-image3 {
     position: absolute;
-    background: #333 url("../img/offer/111.png") no-repeat center;
+    background: #333 url("../img/Images/2222.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
@@ -732,7 +732,7 @@ tr:nth-child(even){background-color: darkseagreen}
 }
 #showcase2 .bg-image2 {
     position: absolute;
-    background: #333 url("../img/offer/222.png") no-repeat center;
+    background: #333 url("../img/Images/1111.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 450px;
