--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -31,7 +31,7 @@ Navigation bar
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #ffffff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -41,7 +41,7 @@ Navigation bar
 
 
 .active {
-    background-color: #4CAF50;
+    background-color: #336E64;
     color: white;
 }
 
@@ -73,7 +73,7 @@ Navigation bar
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #336E6A;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -268,7 +268,7 @@ p {
 }
 /* Footer */
 .footer-distributed{
-	background-color: #292c2f;
+	background-color: #336E6A;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -277,7 +277,7 @@ p {
 }
 
 .footer-distributed .footer-left p{
-	color:  #8f9296;
+	color:  #f2f2f2;
 	font-size: 14px;
 	margin: 0;
 }
@@ -430,7 +430,7 @@ input[type=text],  textarea {
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
+    background-color: #336E6A;
     color: white;
     padding: 12px 20px;
     border: none;
