--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -724,7 +724,7 @@ tr:nth-child(even){background-color: darkseagreen}
 
 #showcase3 .bg-image3 {
     position: absolute;
-    background: #333 url("../img/Images/2222.png") no-repeat center;
+    background: url("../img/Images/2222.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 22.5em;
@@ -733,7 +733,7 @@ tr:nth-child(even){background-color: darkseagreen}
 }
 #showcase2 .bg-image2 {
     position: absolute;
-    background: #333 url("../img/Images/1111.png") no-repeat center;
+    background: url("../img/Images/1111.png") no-repeat center;
     background-size: cover;
     width: 100%;
     height: 20em;
