--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -178,7 +178,7 @@ p {
 
 /* Header Showcase */
 
-#showcase {
+#showcase #showcase2 #showcase3{
     min-height: 21.5em;
     color: #fff;
     text-align: center;
@@ -210,10 +210,36 @@ p {
     padding-bottom: 0;
 }
 
-#showcase .content-wrap,
+#showcase .content-wrap, #showcase2 #showcase3
 #section-a .content-wrap {
     padding: 0 1.5em;
 }
+
+
+#showcase3 .bg-image3 {
+    position: absolute;
+    background: url("../img/Images/2222.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background: #333;
+    width: 100%;
+    height: 22.5em;
+    z-index: -1;
+    opacity: 0.4;
+}
+#showcase2 .bg-image2 {
+    position: absolute;
+    background: url("../img/Images/1111.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 22.5em;
+    z-index: -1;
+    opacity: 0.4;
+}
+
 
 /* Section A */
 
@@ -722,24 +748,6 @@ th,td {
 tr:nth-child(even){background-color: darkseagreen}
 
 
-#showcase3 .bg-image3 {
-    position: absolute;
-    background: url("../img/Images/2222.png") no-repeat center;
-    background-size: cover;
-    width: 100%;
-    height: 22.5em;
-    z-index: -1;
-    opacity: 0.4;
-}
-#showcase2 .bg-image2 {
-    position: absolute;
-    background: url("../img/Images/1111.png") no-repeat center;
-    background-size: cover;
-    width: 100%;
-    height: 20em;
-    z-index: -1;
-    opacity: 0.4;
-}
 
 
 
