--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -724,7 +724,10 @@ tr:nth-child(even){background-color: darkseagreen}
 
 #showcase3 .bg-image3 {
     position: absolute;
-    background: url("../img/Images/2222.png") no-repeat center;
+    background: #333
+    url("../img/Images/2222.png");
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: 22.5em;
@@ -733,15 +736,18 @@ tr:nth-child(even){background-color: darkseagreen}
 }
 #showcase2 .bg-image2 {
     position: absolute;
-    background: url("../img/Images/1111.png") no-repeat center;
+    background: #333
+    url("../img/Images/1111.png");
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 20em;
+    height: 22.5em;
     z-index: -1;
     opacity: 0.4;
 }
 
-
+ 
 
 
 .Wrapper1{
