--- a/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/css/Style.css
@@ -748,11 +748,11 @@ th,td {
 tr:nth-child(even){background-color: darkseagreen}
 
 
-<<<<<<< HEAD
+
 #showcase3 .bg-image3 {
     position: absolute;
-    background: #333
-    url("../img/Images/2222.png");
+    background: #333;
+    /*url("../img/Images/2222.png");*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -760,11 +760,12 @@ tr:nth-child(even){background-color: darkseagreen}
     height: 22.5em;
     z-index: -1;
     opacity: 0.4;
+    background-image: url(../img/images/2222.png);
 }
 #showcase2 .bg-image2 {
     position: absolute;
-    background: #333
-    url("../img/Images/1111.png");
+    background: #333;
+    /*url("../img/Images/1111.png");*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -772,9 +773,8 @@ tr:nth-child(even){background-color: darkseagreen}
     height: 22.5em;
     z-index: -1;
     opacity: 0.4;
+    background-image: url(../img/images/1111.png);
 }
-=======
->>>>>>> ebf66d65b2fe11a310d035b17161a66602509831
 
  
 
